    * Made one-to-one relationships (attempt to) work even when uniqueness is 
      not apparent in the metadata.
    * Added the unique_key_by_name() metadata method.
    * Added the ability to do unrestricted joins in some circumstances.
    * The key_column() method in the ForeignKey class now works correctly.
      (Patch by Christopher Masto)

0.765 (07.21.2007) - John Siracusa <siracusa@gmail.com>

    * Added a value_type attribute to SET columns.
    * Added a normalize_get_objects_args() utility method to make
      custom Manager methods less cumbersome to implement.
    * Setting a BigInt column to undef no longer sets it to zero.
      (Reported by Jeffrey Horn)
    * Corrected error propagation in many-to-many "find" methods when bad
      arguments are passed.  (Reported by Michael Reece)
    * Added "use strict" the output of perl_manager_class().
    * Restored default use of table aliases in Manager queries.  The new
      table_aliases parameter can be used to alter the behavior.
    * Added support for literal sort_by parameters using scalar references.
    * Added is/is_not comparison operators to QueryBuilder.  (Suggested by
      Jonathan Vanasco)
    * Scalar references appearing in the select => ... list in Manager calls
      are now passed through unmodified.
    * Existing map records are now correctly checked for when adding items
      through a many-to-many relationship.  (Reported by Drew Taylor)
    * Using a nonexistent column name in a primary or unique key is now a
      fatal error.  (Reported by Philip Dye)
    * Multi-columns "select count(distinct ...)" queries now fall back to 
      count(*) on a subselect in databases that do not support calling count
      on multi-argument distinct clauses.  (Reported by Derek Watson)
    * The auto-init system will now skip Postgres functional indexes when 
      extracting unique keys.  (Reported by Jonathan Vanasco)